@@ -204,7 +204,14 @@
                                 <Anchor point="TOPRIGHT" relativePoint="TOPRIGHT" x="-2" y="-2"></Anchor>
                             </Anchors>
                         </FontString>
-
+                        <FontString name="$parentHealth" text="" parentKey="healthstring" inherits="GameFontNormalSmall" justifyH="RIGHT">
+                            <Size x="100" y="10"/>
+                            <Color r="1" g="1" b="1"></Color>
+                            <Anchors>
+                                <Anchor point="BOTTOMLEFT" relativePoint="BOTTOMLEFT" x="2" y="7"></Anchor>
+                                <Anchor point="BOTTOMRIGHT" relativePoint="BOTTOMRIGHT" x="-2" y="-2"></Anchor>
+                            </Anchors>
+                        </FontString>
                     </Layer>
                 </Layers>
             </Frame>
